@@ -143,7 +143,7 @@ function mysprintf($format,$value,$kilo=1000)
 	$output = "";
 
 	wm_debug("mysprintf: $format $value\n");
-	if(preg_match("/%(\d*\.?\d*)k/",$format,$matches))
+	if (preg_match("/%(\d*\.?\d*)k/",$format,$matches))
 	{
 		$spec = $matches[1];
 		$places = 2;
@@ -157,8 +157,28 @@ function mysprintf($format,$value,$kilo=1000)
 		$result = nice_scalar($value, $kilo, $places);
 		$output = preg_replace("/%".$spec."k/",$format,$result);
 	}
-	else
-	{
+	elseif (preg_match("/%(\d*)([Tt])/",$format,$matches)) {
+		$spec = $matches[2];
+		$precision = ($matches[1] ==''? 10 : intval($matches[1]));
+		# special formatting for time_t (t) and SNMP TimeTicks (T)
+		if($spec == "T") $value = $value/100;
+		
+		$results = array();
+		$periods = array( "y"=>24*60*60*365, "d"=>24*60*60, "h"=>60*60, "m"=>60,"s"=>1);
+		foreach ($periods as $periodsuffix=>$timeperiod) {
+			$slot = floor($value/$timeperiod);
+			$value = $value - $slot*$timeperiod;
+			
+			if($slot > 0) {
+				$results[] = sprintf("%d%s", $slot, $periodsuffix);
+			}
+		}
+		if(sizeof($results)==0) {
+			$results[]="0s";
+		}		
+		$output = implode("", array_slice($results,0,$precision));
+		
+	} else {
 		wm_debug("Falling through to standard sprintf\n");
 		$output = sprintf($format,$value);
 	}
